# blossom

./: .envrc  .gitignore  .monorepo-root  .pip  CLAUDE.md  README.md  dagster_cloud.yaml  docker-compose.yaml  flake.nix  pyproject.toml
backend/: .env  .pgmigrate.yaml  Makefile  README.md  conftest.py  default.nix  pyproject.toml  schema.sql  setup.py  yoyo.ini
backend/cli/: __main__.py
backend/codegen/sqlc/: models.py  queries.py
backend/foundation/conf/: README.md
backend/foundation/config/: __init__.py
backend/foundation/database/: README.md  __init__.py  row_level_security_test.py  schema_test.py  sqlc_test.py
backend/foundation/db/: README.md  __init__.py
backend/foundation/log/: __init__.py
backend/foundation/mig/: README.md  migrate.py  migrate_test.py
backend/foundation/migrate/: README.md  __init__.py  migrate_test.py  schema_test.py
backend/foundation/root/: README.md  __init__.py
backend/foundation/rpc/: README.md  catalog.py  catalog_test.py  codegen.py  error.py  queries.sql  route.py  route_test.py
backend/foundation/std/: README.md  bytes.py  str.py  str_test.py
backend/foundation/test/: README.md  db.py  factory.py  fixture.py  queries.sql  rpc.py
backend/foundation/vault/: README.md  queries.sql  secrets.py  secrets_test.py
backend/foundation/webserver/: README.md  __init__.py
backend/migrations/: 20230127_01_aQQKb-setup.rollback.sql  20230127_02_AX4eH-row-level-security.rollback.sql  20230127_03_GpsMd-users.rollback.sql  20230127_03_GpsMd-users.sql  20230127_04_5yl8v-tenants.rollback.sql  20230127_04_5yl8v-tenants.sql  20230220_01_ZJvx5-sessions.rollback.sql  20230220_01_ZJvx5-sessions.sql  20230220_02_8Jyeb-vaulted-secrets.rollback.sql  README.md
backend/product/authn/: queries.sql  routes.py  routes_test.py
backend/product/cli/: README.md  __main__.py
backend/product/migrations/: 20230127_01_aQQKb-nanoid.rollback.sql  20230127_01_aQQKb-nanoid.sql  20230127_02_GpsMd-spinup.rollback.sql  20230127_02_GpsMd-spinup.sql  README.md
backend/product/tenants/: queries.sql
backend/product/users/: README.md  create.py  queries.sql  routes.py  routes_test.py
backend/product/webserver/: README.md  __init__.py
python/: .coveragerc  .env  .env.example  .envrc  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yaml  justfile  pyproject.toml  requirements.txt  schema.sql  schema_annotations.yaml  setup.py  sqlc.yaml  tach.toml  yoyo.ini
python/.dagster_cache/: .gitkeep
python/.semgrep/: dagster-context.yaml  empty-init.yaml  f-string.yml  models-import.yaml  print.yml  stub.yaml
python/claude/issue_250127_sqlc_gen_python/: DESIGN.md  WORKLIST.md
python/cli/: __main__.py
python/codegen/sqlc/: README.md  models.py
python/database/: CLAUDE.md  README.md  __main__.py  batch_test.py  conn.py  conn_test.py  enums.py  jsonenc.py  jsonenc_test.py  lock.py  migrate.py  queries.sql  row_level_security_test.py  schema.sql  schema_annotations.yaml  schema_test.py  testdb.py  testdb_test.py  xact.py
python/database/__codegen__/: auth.py  enums.py  models.py  organizations.py  queries.py  tables.py  testing.py  users.py  vault.py
python/database/__codegen_db__/: enums.py  models.py  queries.py  tables.py
python/database/access/: conn.py  lock.py  row_level_security_test.py  xact.py
python/database/codegen/: models.py  queries.py
python/database/migrations/: 00004_5yl8v-tenants.sql  00006_8Jyeb-vaulted-secrets.sql  20230127_01_aQQKb-setup.sql  20230127_02_AX4eH-row-level-security.sql  20230127_03_GpsMd-users.sql  20230127_04_5yl8v-organizations.sql  20230127_04_5yl8v-tenants.sql  20230220_01_ZJvx5-sessions.sql  20230220_02_8Jyeb-vaulted-secrets.sql
python/database/queries/: queries.sql
python/database/schema/: codegen.py  migrate.py  schema_test.py
python/foundation/: README.md  conftest.py  crypt.py  crypt_test.py  dag.py  dag_test.py  env.py  errors.py  errors_test.py  funcs.py  funcs_test.py  identifiers.py  initialize.py  jsonenc.py  jsonenc_test.py  logs.py  logs_test.py  markup.py  markup_test.py  metrics.py  parse.py  paths.py  retry.py  retry_test.py  rpc.py  rpc_test.py  span.py  spans.py  str_test.py  struct.py  struct_test.py  tasks.py  time.py  time_test.py  vault.py  vault_test.py  webserver.py
python/foundation/config/: README.md  __init__.py
python/foundation/crypto/: crypt.py  crypt_test.py  queries.sql  vault.py  vault_test.py
python/foundation/data/: dag.py  dag_test.py
python/foundation/database/: README.md  __init__.py  row_level_security_test.py  schema_test.py  sqlc_test.py
python/foundation/evals/: runner.py  types.py
python/foundation/log/: README.md  __init__.py
python/foundation/observability/: errors.py  errors_test.py  initialize.py  logs.py  logs_test.py  metrics.py  spans.py
python/foundation/root/: __init__.py
python/foundation/rpc/: README.md  catalog.py  catalog_test.py  codegen.py  error.py  route.py  route_test.py
python/foundation/security/: crypt.py  crypt_test.py  vault.py  vault_test.py
python/foundation/std/: str_test.py
python/foundation/stdlib/: bytes_test.py  clock_test.py  convert.py  convert_test.py  decorators.py  decorators_test.py  funcs.py  funcs_test.py  identifiers.py  jsonenc_test.py  jsonschema.py  jsonschema_test.py  markup_test.py  parse.py  paths.py  retry.py  retry_test.py  str_test.py  tasks.py  time_test.py  types.py  unset.py
python/foundation/test/: README.md  db.py  factory.py
python/foundation/testing/: errors.py  factory.py  factory_test.py  fixture.py  queries.sql  rand.py  rpc.py  snapshots.py  testdb.py  testdb_test.py
python/foundation/vault/: secrets.py
python/foundation/webserver/: __init__.py  rpc.py  rpc_test.py  webserver.py
python/migrations/: 00001_aQQKb-setup.sql
python/panopticon/: README.md  __main__.py  app.py  conftest.py
python/pipeline/: CLAUDE.md  README.md  __main__.py  analytics.py  conftest.py  definitions.py  product.py  queries.sql
python/pipeline/__codegen_db__/: queries.py
python/product/: CLAUDE.md  README.md  __main__.py  app.py  conftest.py
(+1422 files in other folders)
