[tool.poetry]
name = "backend"
version = "0.0.0"
description = ""
authors = ["blissful <blissful@sunsetglow.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
jinja2 = "^3.1.2"
pendulum = "^2.1.2"
procrastinate = "^0.27.0"
psycopg = {extras = ["pool", "binary"], version = "^3.1.8"}
pydantic = "^1.10.5"
python-dotenv = "^0.21.1"
quart = "^0.18.3"
werkzeug = "^2.2.3"
yoyo-migrations = "^8.2.0"

[tool.poetry.group.dev.dependencies]
dacite = "^1.8.0"
mypy = "^1.0.1"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
force-exclude = '''
(
  /(
      \.git          # exclude a few common directories in the
    | \.mypy_cache   # root of the project
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | snapshots
    | codegen
  )/
)
'''

[tool.ruff]
select = [
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # pep8-naming
  "N",
  # flake8-unused-arguments
  "ARG",
  # pyupgrade
  "UP",
  # flake-bugbear
  "B",
  # flake8-builtins
  "A",
  # isort
  "I",
  # flake8-comprehensions
  "C4",
  # flake8-import-conventions
  "ICN",
  # flake8-pytest-style
  "PT",
  # flake8-simplify
  "SIM",
  # pandas-vet
  "PD",
  # flake8-use-pathlib - in ruff/main but not yet in the nixified version
  # "PTH",
]
ignore = [
  # Rule: Use `@pytest.mark.asyncio()` over `@pytest.mark.asyncio`
  # Don't care, seems to be the same thing, less typing for me.
  "PT023",
  # Rule: f-string without any placeholders
  # This conflicts with my semgrep rule to require f-strings when there is a
  # curly brace in the string. One extra f-string is far more innocuous than a
  # missed f-string, so I'm picking the semgrep rule.
  "F541",
]
line-length = 100
exclude = ["snapshots", ".venv", "codegen"]
src = ["."]

[tool.mypy]
strict = true
strict_optional = true
explicit_package_bases = true
disallow_untyped_decorators = false  # pytest.mark.asyncio doesn't like this
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = "yoyo.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "pytest_asyncio.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "setuptools"
ignore_missing_imports = true
